2017-02-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/tapefile.c (tape_overwrite, nb_tape_in_storage): Take
	  storage as argument, Check NULL storage name and labelstr
	* server-src/tapefile.h (tape_overwrite, nb_tape_in_storage): New
	  prototypes
	* server-src/planner.c (when_overwrite): Pass the storage argument
	  to tape_overwrite and nb_tape_in_storage

2017-02-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c, common-src/security-file.c,
	  common-src/stream.c: Fix bug found by coverity

2017-02-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/ndmp-device.c (read_to_connection_impl):Correctlycompute
	  the offset

2017-02-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amcleanupdisk.pl: Fix renaming tmp holding file

2017-02-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Charles Curley
	* common-src/ammessage.c: Fix message
	* man/xml-source/amanda.8.xml: Fix documentation

2017-02-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/tapefile.c (nb_tape_in_storage): Fix for older glib2

2017-02-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ambind.c: Print 'WARNING:' prefix if we should retry on
	  a different port
	* common-src/amutil.c: Parse 'WARNING:' prefix
	* common-src/stream.c, common-src/dgram.c: Handle retry
	* common-src/security-file.c (security_allow_bind): Check the port
	  have no name

2017-02-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/tapefile.c (nb_tape_in_storage): Use g_strcmp0

2017-02-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amtape.pl: Add a drive argument to 'amtape slot'
	* perl/Amanda/Changer/robot.pm (load_unlocked): Use the drive argument
	* man/xml-source/amtape.8.xml: Document it
	* NEWS: Document it

2017-02-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-file.c: Parse tcp_port_range and udp_port_range