@@ -1,3 +1,9 @@
+2017-02-28  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* perl/Amanda/Tapelist.swg (remove_tapelabel): Call C_remove_tapelabel
+	* server-src/tapefile.c (add_tapelabel): Verify the label is not
+	  already in the tapelist
+	* installcheck/Amanda_Tapelist.pl: Fix/add check
+
 2017-02-27  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* server-src/tapefile.c (tape_overwrite, nb_tape_in_storage): Take
 	  storage as argument, Check NULL storage name and labelstr
